[package]
name = "hanbeul-dot-com"
version = "0.1.0"
authors = ["hanbeul <han310@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
yew = "0.17"
